--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </div>
 
 <div id="post-box">
-  <div id="post" itemprop="articleBody"><p>A <a href="https://en.wikipedia.org/wiki/Conic"><em>conic</em></a> in the plane $\mathbb{R}^2$ is the zero set of a
+  <div id="post" itemprop="articleBody"><p>A <a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Conic"><em>conic</em></a> in the plane $\mathbb{R}^2$ is the zero set of a
 quadratic polynomial in two variables:</p>
 
 <p class="general-conic">
@@ -60,7 +60,7 @@ quadratic polynomial in two variables:</p>
 <p>Geometrically, a conic can be either a circle, an ellipse, a hyperbola, a parabola or a union of two lines.
 The last case is called a degenerate conic.</p>
 
-<p><a href="https://en.wikipedia.org/wiki/Steiner%27s_conic_problem">Steiner&rsquo;s conic problem</a> asks the question of how many conics are tangent to five given conics. This webpage gives an answer to a slightly different question:
+<p><a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Steiner%27s_conic_problem">Steiner&rsquo;s conic problem</a> asks the question of how many conics are tangent to five given conics. This webpage gives an answer to a slightly different question:
 <p style="width: 100%; text-align: center;">
 <em>Which conics are tangent to your five conics?</em>
 </p></p>
@@ -71,11 +71,11 @@ The last case is called a degenerate conic.</p>
 
 <p><br></p>
 
-<p>More information on how this works can be found in the article <a href="https://arxiv.org/abs/1902.05518">3264 conics in a Second</a>.</p>
+<p>More information on how this works can be found in the article <a target="_blank" rel="noopener noreferrer" href="https://arxiv.org/abs/1902.05518">3264 conics in a Second</a>.</p>
 
 <p><br>
 <div id="action-buttons">
-  <a class="button primary big" href="https://www.juliahomotopycontinuation.org/3264/" onclick="_gaq.push(['_trackEvent', 'kube', 'download']);">If you want to read about 3264 real conics, click here.</a>
+  <a class="button primary big" target="_blank" rel="noopener noreferrer" href="https://www.juliahomotopycontinuation.org/3264/" onclick="_gaq.push(['_trackEvent', 'kube', 'download']);">If you want to read about 3264 real conics, click here.</a>
 </div></p>
 </div>
 
@@ -106,10 +106,10 @@ The last case is called a degenerate conic.</p>
       <ul>
         <!-- <li><span>HomotopyContinuation.jl</span></li> -->
         <li>
-          <a href="https://www.mis.mpg.de/imprint/index.html/">Imprint</a>
+          <a target="_blank" rel="noopener noreferrer" href="https://www.mis.mpg.de/imprint/index.html/">Imprint</a>
         </li>
         <li>
-            <a href="https://www.mis.mpg.de/imprint/privacy-policy.html">Privacy Policy</a>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.mis.mpg.de/imprint/privacy-policy.html">Privacy Policy</a>
           </li>
       </ul>
     </nav>
